2016-04-15  Ben Elliston  <bje@gnu.org>

	* DejaGnu 1.6 released.

2016-04-15  Ben Elliston  <bje@gnu.org>

	* Makefile.am (CONTRIB): Add new contrib scripts.
	* Makefile.in: Regenrate.

2016-04-15  Ben Elliston  <bje@gnu.org>

	* lib/ssh.exp (ssh_exec): Handle regexp return status.

2016-04-13  Ben Elliston  <bje@gnu.org>

	* lib/rsh.exp (rsh_exec): Improve verbose message.
	* lib/ssh.exp (ssh_exec): Likewise.
	* config/adb.exp: Likewise.

2016-04-13  Ben Elliston  <bje@gnu.org>

	* runtest.exp: Improve --version (-v) output.
	* testsuite/runtest.all/options.exp: Update test case.

2016-04-13  Christophe Lyon  <christophe.lyon@linaro.org>

	* lib/rsh.exp (rsh_exec): Handle regexp return status.

2016-04-08  Ben Elliston  <bje@gnu.org>

	Reported by Faraz Shahbazker.
	* doc/dejagnu.texi (Global config file): Fix broken @node.
	(Local config file): Likewise.

2016-04-07  Ben Elliston  <bje@gnu.org>

	* lib/remote.exp (remote_exec): Join cd $remotedir and $program on
	the command line with ';' and not &&.

2016-04-07  Ben Elliston  <bje@gnu.org>

	Reported by Faraz Shahbazker.
	* doc/dejagnu.texi (rsh_exec procedure): Fix broken @node.

2016-04-06  Yvan Roux  <yvan.roux@linaro.org>

	* lib/remote.exp (remnote_download): Create a remote directory if
	needed and use it.
	(remote_exec): Execute program inside remotedir when it exists.
	(standard_load): Set remotedir board field if not present.
	* config/unix.exp (unix_load): Handle remotedir in board field.
	(remotedir): Set board info field.
	* doc/dejagnu.texi (Board File Values): Document remotedir.

2016-04-06  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi (Global config file): Put before node 'Local
	config file'.

2016-04-05  Ben Elliston  <bje@gnu.org>

	* runtest.exp: Remove defunct and undocumented --tool_root option.

2016-04-04  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi: More overhauling.

2016-04-04  Ben Elliston  <bje@gnu.org>

	* lib/targetdb.exp (set_board_info): Improve comment.